force-app/main/default/objects/Batch_Apex_Error__c/Batch_Apex_Error__c.object-meta.xml
<CustomObject>
    <label>Batch Apex Error</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Apex Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>