force-app/main/default/objects/Batch_Apex_Error__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <inlineHelpText>The name of the class that triggered the scheduled job</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>