force-app/main/default/objects/Batch_Apex_Error__c/fields/Batch_Phase__c.field-meta.xml
<CustomField>
    <fullName>Batch_Phase__c</fullName>
    <label>Batch Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>START</fullName>
            </value>
            <value>
                <fullName>EXECUTE</fullName>
            </value>
            <value>
                <fullName>FINISH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>