force-app/main/default/objects/Batch_Apex_Error__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>