force-app/main/default/objects/Batch_Apex_Error__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <inlineHelpText>The AsyncApexJob record for the batch Apex job that failed.</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>