force-app/main/default/objects/Batch_Apex_Error__c/fields/Job_Scope__c.field-meta.xml
<CustomField>
    <fullName>Job_Scope__c</fullName>
    <inlineHelpText>The Record IDs that are in scope if the event was fired from the execute() method of a batch job. If the batch job uses custom iterators instead of sObjects, JobScope is the toString() representation of the iterable objects.</inlineHelpText>
    <label>Job Scope</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>