force-app/main/default/objects/Batch_Apex_Error__c/fields/Replay_ID__c.field-meta.xml
<CustomField>
    <fullName>Replay_ID__c</fullName>
    <inlineHelpText>Represents an ID value that is populated by the system and refers to the position of the event in the event stream. Replay ID values aren’t guaranteed to be contiguous for consecutive events. A subscriber can store a replay ID value and use it on resubscription to retrieve missed events that are within the retention window.</inlineHelpText>
    <label>Replay ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>