force-app/main/default/objects/Batch_Apex_Error__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <label>Stack Trace</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>